fix(blockquote): added negative z-index

--- a/src/app/layout/advanced-search-overlay/advanced-search-overlay.component.scss
+++ b/src/app/layout/advanced-search-overlay/advanced-search-overlay.component.scss
@@ -62,7 +62,7 @@
     a {
       color: var(--grey-44);
       &:hover {
-        color: var(--grey-22)
+        color: var(--grey-22);
       }
     }
     p {
